# embedded-fatfs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO
.github/workflows/: ci.yml
block-device-adapters/: Cargo.toml  README.md
block-device-adapters/src/: buf_stream.rs  lib.rs  stream_slice.rs
block-device-driver/: Cargo.toml  LICENSE-MIT  README.md
block-device-driver/src/: lib.rs
embedded-fatfs/: Cargo.toml
embedded-fatfs/examples/: mkfatfs.rs  write.rs
embedded-fatfs/src/: boot_sector.rs  device.rs  dir.rs  dir_entry.rs  error.rs  file.rs  fs.rs  io.rs  lib.rs  time.rs
embedded-fatfs/tests/: format.rs  read.rs  write.rs
examples/: cat.rs  ls.rs  mkfatfs.rs  partition.rs  write.rs
examples/esp32c6/: Cargo.toml  rust-toolchain.toml
examples/esp32c6/.cargo/: config.toml
examples/esp32c6/src/: main.rs
examples/rp2040/: Cargo.toml  rust-toolchain.toml
examples/rp2040/.cargo/: config.toml
examples/rp2040/src/: main.rs
sdmmc-spi-async/: Cargo.toml
sdmmc-spi-async/src/: lib.rs
sdspi/: Cargo.toml
sdspi/src/: fmt.rs  lib.rs
src/: boot_sector.rs  device.rs  dir.rs  dir_entry.rs  error.rs  file.rs  fs.rs  io.rs  lib.rs  table.rs  time.rs
tests/: format.rs  read.rs  write.rs
