[package]
name = "block-device-adapters"
version = "0.2.0"
edition = "2021"
readme = "README.md"
rust-version = "1.75"
keywords = ["block", "device", "no_std", "partition"]
categories = ["filesystem"]
license = "MIT"
description = """
Block device adapters for managing byte level access and partitions
"""

[dependencies]
aligned = "0.4.2"
embedded-io-async = "0.6.1"
block-device-driver = { version = "0.2", path = "../block-device-driver" }

log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1", default-features = false, features = ["fs", "rt-multi-thread", "macros", "io-util"] }
anyhow = "1"
embedded-io-adapters = { version = "0.6", package = "embedded-io-adapters", features = ["tokio-1"] }

[features]
log = ["dep:log"]
defmt = ["dep:defmt"]
