[package]
name = "esp32c6"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.20.1", features = ["esp32c6", "async"] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32c6"] }
esp-backtrace = { version = "0.14.1", features = ["esp32c6", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.11.0", features = ["esp32c6", "log"] }
log = { version = "0.4.20" }
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
embassy-executor = { version = "0.6.0",  features = ["task-arena-size-8192"] }
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.1.0", features = ["async", "defmt-03"] }
static_cell = { version = "1", features = ["nightly"] }
embedded-io-async = "0.6"

sdspi = { version = "0.1.0", path = "../../sdspi", features = ["log"] }
aligned = "0.4.2"
block-device-adapters = { version = "0.2.0", path = "../../block-device-adapters" }
embedded-fatfs = { version = "0.1.0", path = "../../embedded-fatfs", default-features = false, features = ["log"] }
